--- a/templates/code.html
+++ b/templates/code.html
@@ -4,17 +4,22 @@
 <title>zWSGI</title>
 <style>
 html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
+body { width: 35em; margin: 0 auto; font-family: Tahoma, Verdana, Arial, sans-serif; }
+lines { width: 5%; display: inline-block; font-family: monospace; text-align: right; }
+lines > linenum { display: inline-block; border-right: 2px black solid; padding-right: 2px; }
+code { display: inline-block; width: 94% }
+code > span {  display: inline-block; width: 90%; white-space: pre; font-family: monospace; }
 </style>
 </head>
 <body>
-<h1>Task Failed Successfully!</h1>
-<p>The git repo you're looking for is in another castle :(<br/>
-Please try again repeatedly... surely it'll work this time!</p>
-<p>If you are the system administrator you should already know why <br/>
-it's broken what are you still reading this for?!</p>
-<p><em>Faithfully yours, Geoff from Accounting.</em></p>
+<div>
+    <lines>
+      <!-- lines -->
+    </lines>
+    <code>
+      <!-- code -->
+    </code>
+  </div>
 </body>
 </html>
 
