--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -26,7 +26,7 @@
       .commit-flex > .col > .month {
         width: 13px;
         height: 13px;
-        display: inline-table;
+        display: inline-block;
       }
       .commit-flex > .col > .day {
         width: 13px;
