playing around with static/ dir

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -2,48 +2,10 @@
 <html>
   <head>
     <title>zWSGI</title>
-    <style>
-      .commit-flex {
-        height: 126px;
-        display: inline-table;
-        width: 1100px;
-        background: blue;
-      }
-      .commit-flex > .day-col {
-        width: 80px;
-        margin: 0 2px;
-        display: inline-table;
-        text-align: right;
-        padding: 2px 0;
-      }
-      .commit-flex > .col {
-        width: 13px;
-        margin: 0 2px;
-        display: inline-table;
-        text-align: center;
-        padding: 2px 0;
-      }
-      .commit-flex > .col > .month {
-        width: 13px;
-        height: 13px;
-        display: inline-block;
-      }
-      .commit-flex > .col > .day {
-        width: 13px;
-        height: 13px;
-        display: inline-table;
-        background: green;
-      }
-
-      html { color-scheme: light dark; }
-      body {
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-        text-align: center;
-      }
-    </style>
+    <link href="/static/main.css" rel="stylesheet">
   </head>
   <body>
+    <h1>srctree</h1>
     <!-- flexes -->
   </body>
 </html>
