--- a/static/main.css
+++ b/static/main.css
@@ -53,9 +53,13 @@ body > h1 {
 	border: solid 1px;
 	border-radius: 4px;
 	border-color: gray lightgray lightgray;
-	background-image: linear-gradient(108deg, #00DBDE 0%, #FC00FF 100%);
 	transition: 0.2s;
 	background-size: 200% auto;
+	background-color: #303030;
+}
+
+.day-commits {
+	background-image: linear-gradient(108deg, #00DBDE 0%, #FC00FF 100%);
 }
 
 .commit-flex > .col > .day:hover {
