fix templates with improved css

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>srctree</h1>
+    <div style="text-align: center;">
     <!-- flexes -->
+    <div>
   </body>
 </html>
 
