--- a/static/main.css
+++ b/static/main.css
@@ -7,28 +7,47 @@ body {
 	font-family: "Ubunutu Mono", sans-serif;
 }
 
-body > h1 {
-	width: 950px;
-	text-align: left;
+header {
+	width: 1050px;
 	margin: auto;
-	padding: 0 0 0 40px;
-	font-family: 'Titillium Web', sans-serif;
 }
 
-lines { 
+header > h1 {
+	font-family: 'Titillium Web', sans-serif;
+	font-size: 300%;
+	margin: auto;
+	padding: 0 0 0 40px;
+	text-align: left;
+	display: inline-block;
+}
+
+header > ul {
+	display: inline-block;
+}
+
+header > ul > li {
+	display: inline-block;
+	padding: 20px;
+}
+
+content {
+	text-align: center;
+}
+
+lines {
 	width: 5%;
 	display: inline-block;
 	font-family: monospace;
 	text-align: right;
 }
 
-lines > linenum { 
+lines > linenum {
 	display: inline-block;
 	border-right: 2px black solid;
 	padding-right: 2px;
 }
 
-code { 
+code {
 	display: inline-block;
 	width: 94%;
 }
@@ -37,7 +56,7 @@ code > span {
 	display: inline-block;
 	width: 90%;
 	white-space: pre;
-	font-family: monospace; 
+	font-family: monospace;
 }
 
 repos {
@@ -48,24 +67,22 @@ repos {
 	width: 950px;
 }
 
-repos > li {
+li {
 	list-style: none;
 }
 
-li::before { content: "📁";
+repos > li::before { content: "📁";
 	padding-right: 8px;
 	color: red;
 }
 
 .commit-flex {
-	height: 126px;
-	width: 1100px;
+	width: 1050px;
 	margin: auto;
 	line-height: 100%;
 }
 
 .commit-flex > .day-col {
-	width: 80px;
 	margin: 0 2px;
 	display: inline-table;
 	text-align: right;
@@ -117,38 +134,38 @@ li::before { content: "📁";
 
 /* Titillium Licence /static/OFL.txt */
 @font-face {
-  font-family: 'Titillium Web';
-  font-style: italic;
-  font-weight: 300;
-  src: url(/static/TitilliumWeb-LightItalic.ttf) format('truetype');
+	font-family: 'Titillium Web';
+	font-style: italic;
+	font-weight: 300;
+	src: url(/static/TitilliumWeb-LightItalic.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Titillium Web';
-  font-style: italic;
-  font-weight: 400;
-  src: url(/static/TitilliumWeb-Italic.ttf) format('truetype');
+	font-family: 'Titillium Web';
+	font-style: italic;
+	font-weight: 400;
+	src: url(/static/TitilliumWeb-Italic.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Titillium Web';
-  font-style: italic;
-  font-weight: 600;
-  src: url(/static/TitilliumWeb-SemiBoldItalic.ttf) format('truetype');
+	font-family: 'Titillium Web';
+	font-style: italic;
+	font-weight: 600;
+	src: url(/static/TitilliumWeb-SemiBoldItalic.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Titillium Web';
-  font-style: italic;
-  font-weight: 700;
-  src: url(/static/TitilliumWeb-BoldItalic.ttf) format('truetype');
+	font-family: 'Titillium Web';
+	font-style: italic;
+	font-weight: 700;
+	src: url(/static/TitilliumWeb-BoldItalic.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Ubuntu Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: url(/static/UbuntuMono_Regular.ttf) format('truetype');
+	font-family: 'Ubuntu Mono';
+	font-style: normal;
+	font-weight: 400;
+	src: url(/static/UbuntuMono_Regular.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Ubuntu Mono';
-  font-style: italic;
-  font-weight: 400;
-  src: url(/static/UbuntuMono-Italic.ttf) format('truetype');
+	font-family: 'Ubuntu Mono';
+	font-style: italic;
+	font-weight: 400;
+	src: url(/static/UbuntuMono-Italic.ttf) format('truetype');
 }
