--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -5,10 +5,19 @@
     <link href="/static/main.css" rel="stylesheet">
   </head>
   <body>
+    <header>
     <h1>srctree</h1>
-    <div style="text-align: center;">
+    <ul>
+      <li><a href="/">home</a></li>
+      <li><a href="/repos">repos</a></li>
+      <li><a href="/user">owner</a></li>
+      <li><a href="/tree">tree</a></li>
+    </ul>
+    <span class="auth"><!-- header_auth --></span>
+    </header>
+    <content>
     <!-- flexes -->
-    <div>
+    </content>
   </body>
 </html>
 
