--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>zWSGI</title>
+    <title>srctree</title>
     <link href="/static/main.css" rel="stylesheet">
   </head>
   <body>
