use zig like namespace notation for templates

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -13,7 +13,7 @@
       <li><a href="/user">owner</a></li>
       <li><a href="/tree">tree</a></li>
     </ul>
-    <span class="auth"><!-- header_auth --></span>
+    <span class="auth"><!-- header.auth --></span>
     </header>
     <content>
     <!-- flexes -->
