--- a/templates/code.html
+++ b/templates/code.html
@@ -16,12 +16,8 @@
     <span class="auth"><!-- header.auth --></span>
     </header>
     <content>
-      <lines>
-      <!-- lines -->
-      </lines>
-      <code>
-        <!-- code -->
-      </code>
+      <lines><!-- lines --></lines>
+      <code><!-- code --></code>
     </content>
   </body>
 </html>
