--- a/templates/repos.html
+++ b/templates/repos.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>zWSGI</title>
+    <title>srctree</title>
     <link href="/static/main.css" rel="stylesheet">
   </head>
   <body>
+    <header>
     <h1>srctree</h1>
-    <div>
-      <repos>
+    <ul>
+      <li><a href="/">home</a></li>
+      <li><a href="/repos">repos</a></li>
+      <li><a href="/user">owner</a></li>
+      <li><a href="/tree">tree</a></li>
+    </ul>
+    <span class="auth"><!-- header.auth --></span>
+    </header>
+    <content>
       <!-- repos -->
-      </repos>
-    </div>
+    </content>
   </body>
 </html>
