list repo files from git objs

--- a/templates/repo.html
+++ b/templates/repo.html
@@ -19,6 +19,8 @@
       <b><!-- branch.default --></b>
       <p>branches</p>
       <!-- branches -->
+      <b>files</b>
+      <!-- files -->
     </content>
   </body>
 </html>
