--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,7 @@
 html {
 	color-scheme: light dark;
+	background: #201B22;
+	color: #FFFFEB;
 }
 
 body {
@@ -94,6 +96,30 @@ file {
 	border: 2px solid gray;
 	width: 50%;
 	padding: 4px;
+}
+
+commit {
+	display: block;
+	text-align: left;
+	padding: 8px;
+	background: #333;
+	border-radius: 5px 5px 0 0;
+
+}
+
+commitfoot{
+	display: block;
+	background-color: #686868;
+	border-bottom: #7a003f solid 2px;
+	margin-bottom: 20px;
+	text-align: left;
+	border-radius: 0 0 5px 5px;
+	padding: 8px;
+}
+
+commitfoot > span {
+	display: inline-block;
+	float: right;
 }
 
 .commit-flex {
