update repo endpoint to look it has files & dirs

--- a/static/main.css
+++ b/static/main.css
@@ -90,6 +90,14 @@ repos > li::before {
 	color: red;
 }
 
+tree {
+	display: block;
+	text-align: left;
+	border: 2px solid gray;
+	width: 50%;
+	padding: 4px;
+}
+
 file {
 	display: block;
 	text-align: left;
