play around with the theme a bit
I'm not sure if I'm happy with it yet or not, but this is a start

--- a/templates/repo.html
+++ b/templates/repo.html
@@ -16,11 +16,14 @@
     <span class="auth"><!-- header.auth --></span>
     </header>
     <content>
+      <!-- head-commit -->
+      <div class="treelist">
+      <!-- files -->
+      </div>
+
       <b><!-- branch.default --></b>
       <p>branches</p>
       <!-- branches -->
-      <b>files</b>
-      <!-- files -->
     </content>
   </body>
 </html>
