--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,9 @@
 html {
+	/*background: #201B22;*/
+	background-image: linear-gradient(0deg, #290015 0%, #101010 6%);
 	color-scheme: light dark;
-	background: #201B22;
 	color: #FFFFEB;
+	min-height: 100%;
 }
 
 body {
@@ -10,21 +12,40 @@ body {
 }
 
 header {
-	width: 1050px;
+	display: flex;
+	justify-content: space-between;
 	margin: auto;
+	width: 1050px;
 }
 
 header > h1 {
+	display: inline-block;
 	font-family: 'Titillium Web', sans-serif;
 	font-size: 300%;
-	margin: auto;
+	margin: 0 0 16px 0;
 	padding: 0 0 0 40px;
 	text-align: left;
-	display: inline-block;
+	width: 25%;
+}
+
+header a {
+	text-decoration: none;
+	color: #FFFFEB;
+	padding: 10px 10px;
+	background-color: #686868;
+	border-bottom: #7a003f solid 2px;
+	margin-bottom: 20px;
+	text-align: left;
+	border-radius: 0 0 5px 5px;
+	padding: 8px;
+
 }
 
 header > ul {
-	display: inline-block;
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	width: 50%;
 }
 
 header > ul > li {
@@ -131,6 +152,16 @@ commit > foot > span {
 	float: right;
 }
 
+.treelist {
+	background: #333;
+	color: #FFFFEB;
+	padding: 10px 0;
+}
+
+.treelist a {
+	text-decoration: none;
+}
+
 .commit-flex {
 	width: 1050px;
 	margin: auto;
@@ -188,39 +219,9 @@ commit > foot > span {
 }
 
 /* Titillium Licence /static/OFL.txt */
-@font-face {
-	font-family: 'Titillium Web';
-	font-style: italic;
-	font-weight: 300;
-	src: url(/static/TitilliumWeb-LightItalic.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'Titillium Web';
-	font-style: italic;
-	font-weight: 400;
-	src: url(/static/TitilliumWeb-Italic.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'Titillium Web';
-	font-style: italic;
-	font-weight: 600;
-	src: url(/static/TitilliumWeb-SemiBoldItalic.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'Titillium Web';
-	font-style: italic;
-	font-weight: 700;
-	src: url(/static/TitilliumWeb-BoldItalic.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'Ubuntu Mono';
-	font-style: normal;
-	font-weight: 400;
-	src: url(/static/UbuntuMono_Regular.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'Ubuntu Mono';
-	font-style: italic;
-	font-weight: 400;
-	src: url(/static/UbuntuMono-Italic.ttf) format('truetype');
-}
+@font-face { font-family: 'Titillium Web'; font-style: italic; font-weight: 300; src: url(/static/TitilliumWeb-LightItalic.ttf) format('truetype'); }
+@font-face { font-family: 'Titillium Web'; font-style: italic; font-weight: 400; src: url(/static/TitilliumWeb-Italic.ttf) format('truetype'); }
+@font-face { font-family: 'Titillium Web'; font-style: italic; font-weight: 600; src: url(/static/TitilliumWeb-SemiBoldItalic.ttf) format('truetype'); }
+@font-face { font-family: 'Titillium Web'; font-style: italic; font-weight: 700; src: url(/static/TitilliumWeb-BoldItalic.ttf) format('truetype'); }
+@font-face { font-family: 'Ubuntu Mono'; font-style: normal; font-weight: 400; src: url(/static/UbuntuMono_Regular.ttf) format('truetype'); }
+@font-face { font-family: 'Ubuntu Mono'; font-style: italic; font-weight: 400; src: url(/static/UbuntuMono-Italic.ttf) format('truetype'); }
