--- a/static/main.css
+++ b/static/main.css
@@ -6,6 +6,10 @@ html {
 	min-height: 100%;
 }
 
+a {
+	text-decoration: none;
+}
+
 body {
 	margin: 0 auto;
 	font-family: "Ubunutu Mono", sans-serif;
@@ -38,7 +42,6 @@ header a {
 	text-align: left;
 	border-radius: 0 0 5px 5px;
 	padding: 8px;
-
 }
 
 header > ul {
@@ -79,6 +82,10 @@ ln::after {
 	content: attr(num);
 }
 
+.code-block {
+	background: #333;
+}
+
 code {
 	display: inline-block;
 	text-align: left;
@@ -94,11 +101,47 @@ code {
 }
 
 repos {
-	display: block;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
 	margin: auto;
 	padding: 0 0 0 50px;
 	text-align: left;
 	width: 950px;
+
+}
+repo name {
+	background: #333;
+	height: 30px;
+	display: block;
+	border-radius: 20px 20px 0 0;
+	border: 2px gray solid;
+	border-bottom: 0px ;
+	padding: 12px 0 4px 12px;
+	margin: 0;
+}
+
+repo name a {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+repo desc {
+	display: block;
+	border: 2px gray solid;
+	padding: 20px 0;
+	border-bottom: #7a003f solid 2px;
+	margin-bottom: 20px;
+	height: 50px;
+	display: block;
+	border-radius: 0 0 20px 20px;
+	padding: 8px 0;
+}
+
+repo {
+	width: 44%;
+	margin: 0 auto 10px 1%;
 }
 
 li {
@@ -156,10 +199,6 @@ commit > foot > span {
 	background: #333;
 	color: #FFFFEB;
 	padding: 10px 0;
-}
-
-.treelist a {
-	text-decoration: none;
 }
 
 .commit-flex {
