--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 html {
 	/*background: #201B22;*/
-	background-image: linear-gradient(0deg, #290015 0%, #101010 6%);
+	background-image: linear-gradient(0deg, #290015 0%, #222222 6%);
 	color-scheme: light dark;
 	color: #FFFFEB;
 	min-height: 100%;
@@ -8,6 +8,12 @@ html {
 
 a {
 	text-decoration: none;
+	color: #FFFFEB;
+
+}
+a:visited {
+	text-decoration: none;
+	color: #FFFFEB;
 }
 
 body {
@@ -35,13 +41,13 @@ header > h1 {
 header a {
 	text-decoration: none;
 	color: #FFFFEB;
-	padding: 10px 10px;
-	background-color: #686868;
+	font-size: 108%;
+	padding: 10px 20px 2px;
+	background-color: #222222;
 	border-bottom: #7a003f solid 2px;
 	margin-bottom: 20px;
 	text-align: left;
-	border-radius: 0 0 5px 5px;
-	padding: 8px;
+	border-radius: 0 0  3px 3px;
 }
 
 header > ul {
@@ -107,18 +113,19 @@ repos {
 	margin: auto;
 	padding: 0 0 0 50px;
 	text-align: left;
-	width: 950px;
 
 }
 repo name {
+	font-family: 'Titillium Web', sans-serif;
 	background: #333;
 	height: 30px;
 	display: block;
-	border-radius: 20px 20px 0 0;
-	border: 2px gray solid;
+	border-radius: 4px 4px 0 0;
+	border: 1px gray solid;
 	border-bottom: 0px ;
-	padding: 12px 0 4px 12px;
+	padding: 4px 0 4px 12px;
 	margin: 0;
+	font-size: 120%;
 }
 
 repo name a {
@@ -129,19 +136,19 @@ repo name a {
 
 repo desc {
 	display: block;
-	border: 2px gray solid;
+	border: 1px gray solid;
 	padding: 20px 0;
 	border-bottom: #7a003f solid 2px;
 	margin-bottom: 20px;
 	height: 50px;
 	display: block;
-	border-radius: 0 0 20px 20px;
+	border-radius: 0 0 4px 4px;
 	padding: 8px 0;
 }
 
 repo {
-	width: 44%;
-	margin: 0 auto 10px 1%;
+	width: 48%;
+	margin: 0 auto 10px 0.5%;
 }
 
 li {
