--- a/templates/repo.html
+++ b/templates/repo.html
@@ -16,7 +16,8 @@
     <span class="auth"><!-- header.auth --></span>
     </header>
     <content>
-      <!-- head-commit -->
+      <!-- commit --> 
+
       <div class="treelist">
       <!-- files -->
       </div>
