--- a/templates/blob.html
+++ b/templates/blob.html
@@ -8,10 +8,7 @@
     <header>
     <h1>srctree</h1>
     <ul>
-      <li><a href="/">home</a></li>
-      <li><a href="/repos">repos</a></li>
-      <li><a href="/user">owner</a></li>
-      <li><a href="/tree">tree</a></li>
+      <!-- _nav.html -->
     </ul>
     <span class="auth"><!-- header.auth --></span>
     </header>
