--- a/static/main.css
+++ b/static/main.css
@@ -205,33 +205,25 @@ tree > a {
 	display: inline-block;
 }
 
-.treecommit commit {
+commit {
 	display: block;
 	text-align: left;
-	padding: 0 0 8px;
+	padding: 0;
 	margin-bottom: 20px;
 	background: #333;
 	border-radius: 3px 3px 0 0;
-	border-top: #7a003f solid 2px;
 }
 
-.treecommit commit > top {
+commit > top {
 	display: block;
 	background-color: #686868;
-	text-align: left;
 	border-radius: 3px 3px 0 0;
 	padding: 8px;
-}
-
-
-commit > top > span {
-	display: inline-block;
-	float: right;
+	border-top: #7a003f solid 2px;
 }
 
 commit > data {
 	display: block;
-	text-align: left;
 	padding: 8px;
 	background: #333;
 	border-radius: 3px 3px 0 0;
@@ -241,15 +233,24 @@ commit > foot{
 	display: block;
 	background-color: #686868;
 	border-bottom: #7a003f solid 2px;
-	margin-bottom: 20px;
 	text-align: left;
 	border-radius: 0 0 3px 3px;
 	padding: 8px;
 }
 
+commit > top > span ,
 commit > foot > span {
 	display: inline-block;
 	float: right;
+}
+
+diff {
+	white-space: pre;
+	text-align: left;
+	display: block;
+	background: #333;
+	padding: 8px;
+	font-family: monospace;
 }
 
 .commit-flex {
