--- a/static/main.css
+++ b/static/main.css
@@ -161,7 +161,7 @@ li {
 	background: #333;
 	color: #FFFFEB;
 	padding: 10px;
-	width: 60%;
+	width: 80%;
 	font-family: 'Ubuntu Mono', sans-serif;
 }
 
@@ -182,26 +182,28 @@ li {
 tree {
 	border: 2px solid gray;
 	border-top: 0px;
-	display: block;
 	margin: auto;
 	padding: 4px;
 	text-align: left;
 	width: 98%;
+	display: flex;
+	justify-content: space-between;
 }
 
 file {
 	border: 2px solid gray;
 	border-top: 0px;
-	display: block;
 	margin: auto;
 	padding: 4px;
 	text-align: left;
 	width: 98%;
+	display: flex;
+	justify-content: space-between;
 }
 
 file > a,
 tree > a {
-	width: 100%;
+	width: 40%;
 	display: inline-block;
 }
 
