--- a/templates/blob.html
+++ b/templates/blob.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>srctree</title>
-    <link href="/static/main.css" rel="stylesheet">
+    <!-- _meta_head.html -->
   </head>
   <body>
     <header>
