add _body_header.html template include

--- a/static/main.css
+++ b/static/main.css
@@ -64,6 +64,14 @@ header {
 			padding: 20px;
 		}
 	}
+	.auth {
+		font-size: 108%;
+		padding: 10px 20px 2px;
+		border-bottom: #7a003f solid 2px;
+		border-radius: 0 0 2px 2px;
+		display: inline-block;
+		margin: auto;
+	}
 }
 
 content {
