--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -5,13 +5,7 @@
     <!-- _meta_head.html -->
   </head>
   <body>
-    <header>
-    <h1>srctree</h1>
-    <ul>
-      <!-- _nav.html -->
-    </ul>
-    <span class="auth"><!-- header.auth --></span>
-    </header>
+    <!-- _body_header.html -->
     <content>
     <!-- flexes -->
     </content>
