--- a/static/main.css
+++ b/static/main.css
@@ -289,12 +289,18 @@ diff {
 			border-color: gray lightgray lightgray;
 			transition: 0.2s;
 			background-size: 200% auto;
-			background-color: #303030;
+			background-color: #1a1a1a;
 			&:hover {
 				background-position: right center;
 				text-decoration: none;
 			}
 		}
+		.day-pwr-1 { background-image: linear-gradient(108deg, #00878A 0%, #B100B5 100%); }
+		.day-pwr-2 { background-image: linear-gradient(108deg, #00A6A3 0%, #D000D6 95%); }
+		.day-pwr-3 { background-image: linear-gradient(108deg, #00DBDE 0%, #FC00FF 100%); }
+		.day-pwr-4 { background-image: linear-gradient(108deg, #00DBDE 0%, #FC00FF 80%); }
+		.day-pwr-5 { background-image: linear-gradient(108deg, #00DBDE 0%, #FC00FF 65%); }
+		.day-pwr-max { background-image: linear-gradient(108deg, #00DBDE 0%, #FC00FF 0%); }
 		> div:first-child {
 			line-height: 103%;
 			padding: 0 0 6px;
@@ -302,9 +308,6 @@ diff {
 	}
 }
 
-.day-commits {
-	background-image: linear-gradient(108deg, #00DBDE 0%, #FC00FF 100%);
-}
 
 
 /* Titillium Licence /static/OFL.txt */
