--- a/static/main.css
+++ b/static/main.css
@@ -286,7 +286,7 @@ diff {
 			display: inline-table;
 			border: solid 1px;
 			border-radius: 4px;
-			border-color: gray lightgray lightgray;
+			border-color: #484848 #606060 #808080;
 			transition: 0.2s;
 			background-size: 200% auto;
 			background-color: #1a1a1a;
