--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,4 +1,4 @@
       <li><a href="/repos">repos</a></li>
-      <li><a href="/tree">tree</a></li>
       <li><a href="/user">owner</a></li>
+      <li><a href="/diffs">diffs</a></li>
       <li><a href="/network">network</a></li>
