--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>zWSGI</title>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
-</head>
-<body>
-<h1>Task Failed Successfully!</h1>
-<p>The git repo you're looking for is in another castle :(<br/>
-Please try again repeatedly... surely it'll work this time!</p>
-<p>If you are the system administrator you should already know why <br/>
-it's broken what are you still reading this for?!</p>
-<p><em>Faithfully yours, Geoff from Accounting.</em></p>
-</body>
+  <head>
+    <title>srctree</title>
+    <!-- _meta_head.html -->
+  </head>
+  <body>
+    <!-- _body_header.html -->
+    <content>
+    </content>
+  </body>
 </html>
-
