--- a/templates/4XX.html
+++ b/templates/4XX.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>zWSGI</title>
+<title>srctree</title>
 <style>
-html { color-scheme: light dark; }
+html { background: #222222; color: #FFFFEB; min-height: 100%; }
 body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
