fix html auth link position

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -2,3 +2,4 @@
       <li><a href="/user">owner</a></li>
       <li><a href="/diffs">diffs</a></li>
       <li><a href="/network">network</a></li>
+      <li><!-- header.auth --></li>
