add 404 to 404 template

--- a/templates/4XX.html
+++ b/templates/4XX.html
@@ -8,7 +8,7 @@ body { width: 35em; margin: 0 auto;
 </style>
 </head>
 <body>
-<h1>Task Failed Successfully!</h1>
+<h1>404: Task Failed Successfully!</h1>
 <p>The git repo you're looking for is in another castle :(<br/>
 Please try again repeatedly... surely it'll work this time!</p>
 <p>If you are the system administrator you should already know why <br/>
