--- a/templates/repo.html
+++ b/templates/repo.html
@@ -7,15 +7,7 @@
   <body>
     <!-- _body_header.html -->
     <content>
-      <!-- commit --> 
-
-      <div class="treelist">
-      <!-- files -->
-      </div>
-
-      <b><!-- branch.default --></b>
-      <p>branches</p>
-      <!-- branches -->
-    </content>
+      <!-- repo -->
+      <!-- readme -->
   </body>
 </html>
