--- a/templates/diffs.html
+++ b/templates/diffs.html
@@ -7,6 +7,9 @@
   <body>
     <!-- _body_header.html -->
     <content>
+      <diff>
+        <!-- diff -->
+      </diff>
     </content>
   </body>
 </html>
