--- a/static/main.css
+++ b/static/main.css
@@ -73,11 +73,17 @@ header {
 }
 
 content {
-	display: block;
+	display: flex;
+	justify-content: center;
+	gap: 1em;
 	margin: auto;
 	text-align: center;
 	width: 1050px;
+
 	h3 { text-align: left; }
+	&.patch { 
+		width: unset;
+	}
 }
 
 button {
@@ -347,17 +353,56 @@ diff {
 		align-items: baseline;
 		text-align: left;
 	}
-	patch {
-		/* margin: 2rem 0 10rem; */
-		white-space: pre;
-		text-align: left;
-		display: block;
-		background: #333;
-		padding: 8px;
-		font-family: monospace;
+}
 
-		.del { background: #5b0000 }
-		.add { background: #003e00 }
+patch {
+	/* margin: 2rem 0 10rem; */
+	border: 1px solid gray;
+	border-radius: 4px 4px 0 0;
+	white-space: pre;
+	text-align: left;
+	display: block;
+	background: #333;
+	padding: 8px;
+	font-family: monospace;
+
+	.del { background: #5b0000 }
+	.add { background: #003e00 }
+}
+
+comments {
+
+}
+
+comment {
+	text-align: left;
+	display: block;
+	margin-bottom: 2em;
+	max-width: 45em;
+
+	context {
+		background: #333;
+		border-radius: 4px 4px 0 0;
+		border: 1px gray solid;
+		border-bottom: 0px;
+		display: block;
+		height: 45px;
+		padding: 4px 0 4px 12px;
+	}
+	message {
+		border: 1px solid gray;
+		display: block;
+		padding: 8px;
+
+	}
+	.buttons {
+		background: #333;
+		border-radius: 4px 4px 0 0;
+		border: 1px gray solid;
+		border-bottom: 0px;
+		display: block;
+		height: 45px;
+		padding: 4px 0 4px 12px;
 	}
 }
 
