--- a/static/main.css
+++ b/static/main.css
@@ -73,15 +73,16 @@ header {
 }
 
 content {
-	display: flex;
-	justify-content: center;
-	gap: 1em;
+	display: block;
 	margin: auto;
 	text-align: center;
 	width: 1050px;
 
 	h3 { text-align: left; }
 	&.patch { 
+		display: flex;
+		justify-content: center;
+		gap: 1em;
 		width: unset;
 	}
 }
@@ -355,6 +356,12 @@ diff {
 	}
 }
 
+patchheader {
+	display: block;
+	width: 100%;
+	margin: auto;
+}
+
 patch {
 	/* margin: 2rem 0 10rem; */
 	border: 1px solid gray;
@@ -371,9 +378,31 @@ patch {
 }
 
 comments {
+	form {
+		border: 1px solid gray;
+		display: flex;
+		flex-direction: column;
+		padding: 8px;
+		context {
+			background: #333;
+			border-radius: 3px 3px 0 0;
+			border: 1px gray solid;
+			border-bottom: 0px;
+			display: block;
+			height: 45px;
+			padding: 4px 0 4px 12px;
+		}
+		input, textarea {
+			display: block;
+			background: #333;
+			border: 1px solid gray;
+			border-radius: 2px;
+			font-size: 130%;
+		}
+		textarea { height: 10em }
+	}
 
 }
-
 comment {
 	text-align: left;
 	display: block;
@@ -382,7 +411,7 @@ comment {
 
 	context {
 		background: #333;
-		border-radius: 4px 4px 0 0;
+		border-radius: 3px 3px 0 0;
 		border: 1px gray solid;
 		border-bottom: 0px;
 		display: block;
@@ -393,15 +422,23 @@ comment {
 		border: 1px solid gray;
 		display: block;
 		padding: 8px;
-
 	}
+	input, textarea {
+		display: block;
+		margin: 0 0 1em;
+		width: 100%;
+		background: #333;
+		border: 1px solid gray;
+		border-radius: 2px;
+		font-size: 130%;
+	}
+	textarea { height: 10em }
 	.buttons {
 		background: #333;
-		border-radius: 4px 4px 0 0;
 		border: 1px gray solid;
-		border-bottom: 0px;
+		border-top: 0px;
 		display: block;
-		height: 45px;
+		height: 25px;
 		padding: 4px 0 4px 12px;
 	}
 }
