add diff comment reading writing

--- a/templates/patch.html
+++ b/templates/patch.html
@@ -14,9 +14,11 @@
     <content class="patch">
       <comments>
         <!-- comments -->
-        <form>
+        <form method="POST" action="add-comment">
           <context></context>
           <textarea name="comment"></textarea>
+          <button type="submit" name="comment">Comment</button>
+          <!-- form-data -->
         </form>
       </comments>
       <patch>
